--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,121 +1,167 @@
 .container {
-  min-height: 100vh;
+  /* min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100vh; */
 }
 
 .main {
-  padding: 5rem 0;
+  /* padding: 5rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.topPanel {
+  padding-top: 90px;
+  background: url(images/bg_panel_stripe_blk_50.png) center center repeat;
   text-align: center;
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+section.facebook {
+  background: url(images/bg_panel_grey50.png) center center repeat;
+  padding-bottom: 5em;
+}
+.facebook p.desc {
+  margin: 1em auto;
+  display: block;
+  width: 75%;
+  font-family: "bebasregular", Arial, sans-serif;
+  font-size: 1.7em;
+  line-height: 1.4em;
+  letter-spacing: 1px;
+  word-spacing: 0.1em;
+  color: #256cb2;
+  font-weight: 100;
+  text-transform: uppercase;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
+.join_us {
+  display: inline-block;
+  font-family: "bebasregular", Arial, sans-serif;
+  font-size: 1.3em;
+  color: #111;
+  letter-spacing: 1px;
+  word-spacing: 0.1em;
+  text-align: right;
+  margin-bottom: 1.5em;
+  padding: 0.7em 0.5em 0.5em 0.5em;
+  border: 0px;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+  font-weight: 100;
+  background: #aaa;
+  -moz-border-radius: 5px 5px 5px 5px;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  -khtml-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.join_us:hover {
+  font-size: 1.5em;
+}
+.join_us img {
+  height: 1.2em;
+  vertical-align: -0.15em;
+  margin-right: 4px;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+/* About Us */
+.aboutUsBackground {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: url(images/l_rafin_bk.png) no-repeat bottom right;
+  background-size: contain;
+  z-index: 1;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.aboutUsInfo {
+  margin: 0 auto;
+  padding: 0px 5px 0px 5px;
+  width: 48%;
+  margin-left: 1%;
+  position: relative;
+  z-index: 2;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+@media (max-width: 800px) {
+  .aboutUsInfo {
+    width: 80%;
   }
+}
+
+/* Location */
+
+.location {
+  margin: 0 auto;
+  padding: 1%;
+  overflow: hidden;
+  position: relative;
+  float: left;
+  width: 98%;
+  min-height: 100vh;
+
+  background: -webkit-linear-gradient(
+    0deg,
+    #fbfbfb,
+    #dddddd
+  ); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(
+    0deg,
+    #fbfbfb,
+    #dddddd
+  ); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(
+    0deg,
+    #fbfbfb,
+    #dddddd
+  ); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(
+    270deg,
+    #fbfbfb,
+    #dddddd
+  ); /* Standard syntax, android  */
+}
+
+.location h2 {
+  color: #1a1f1b;
+  font-size: 3.5em;
+  padding-bottom: 0em;
+  margin-top: 0;
+  margin-bottom: 0.2em;
+}
+
+.location h3 {
+  text-align: left;
+  font-size: 2.7em;
+  color: #666;
+  line-height: 1.3em;
+  margin: 0px;
+}
+
+.location P {
+  color: #111;
+}
+
+.location > div {
+  width: 48%;
+  overflow: hidden;
+  float: left;
+}
+
+.location iframe {
+  border: 0;
+  width: 40%;
+  height: 50%;
+  position: absolute;
 }
