--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,210 @@
-html,
+@font-face {
+  font-family: "bebasregular";
+  src: url("font_bebas/BEBAS___-webfont.eot");
+  src: url("font_bebas/BEBAS___-webfont.eot?#iefix") format("embedded-opentype"),
+    url("font_bebas/BEBAS___-webfont.woff") format("woff"),
+    url("font_bebas/BEBAS___-webfont.ttf") format("truetype"),
+    url("font_bebas/BEBAS___-webfont.svg#bebasregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/*
+robotoblack  robotoblack_italic  robotobold  roboto_condensedbold  roboto_condensedbold_italic  robotobold_italic  roboto_condensedregular  roboto_condenseditalic
+robotoitalic  robotolight roboto_condensedlight  roboto_condensedlight_italic  robotolight_italic  robotomedium  robotomedium_italic  robotoregular  robotothin  robotothin_italic
+*/
+
+@media (max-width: 1920px) {
+  html {
+    font-size: 19px;
+  }
+}
+
+@media (max-width: 1440px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 1280px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 800px) {
+  html {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  html {
+    font-size: 15px;
+  }
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: 0 auto;
+  background: url("images/bg.jpg") no-repeat center center fixed;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-a {
-  color: inherit;
+header {
+  margin: 4em auto;
+  display: block;
+  width: 75%;
+  font-family: "bebasregular", Arial, sans-serif;
+  color: #d4882c;
+  text-align: center;
+  text-transform: uppercase;
+
+  min-height: 35vh;
+}
+
+header p {
+  display: inline;
+  margin-inline-start: 0.25em;
+  font-size: 1.7em;
+  font-weight: 100;
+  line-height: 1.4em;
+  letter-spacing: 1px;
+  word-spacing: 0.1em;
+}
+
+H1 {
+  /* Rafin Bass Fissing Guides... */
+  display: inline;
+  font-size: 1.7em;
+  font-weight: 100;
+  line-height: 1.4em;
+  letter-spacing: 1px;
+  word-spacing: 0.1em;
+}
+
+H2 {
+  /* TITULOS SECUNDARIOS */
+  font-family: "bebasregular", Arial, sans-serif;
+  font-size: 2.7em;
+  line-height: 3em;
+  word-spacing: 0.1em;
+  color: #ccc;
+
+  padding-top: 2em;
+  margin-bottom: 1em;
+
+  font-weight: 500;
+  text-transform: uppercase;
+
+  line-height: 1.2em;
+}
+
+H3 {
+  /* SUBTITULOS centrados */
+  font-family: "bebasregular", Arial, sans-serif;
+  font-size: 3.3em;
+  line-height: 1em;
+  word-spacing: 0.2em;
+  color: #fff;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin: 2em 0 3em;
+}
+
+H5 {
+  /* preguntas faq */
+  margin: 0 auto;
+  display: table-cell;
+  width: 75%;
+  font-family: "bebasregular", Arial, sans-serif;
+  font-size: 1.7em;
+  line-height: 1.4em;
+  letter-spacing: 1px;
+  word-spacing: 0.1em;
+  color: #5aa1b7;
+  text-align: left;
+  padding: 0.25em 0em 0.25em 0em;
+  margin-bottom: 0.25em;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+
+/* NAV BAR */
+.nav {
+  position: fixed;
+  top: 0px;
+  margin: 0 auto;
+  background: #000;
+  height: 90px;
+  width: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  font-family: "bebasregular", Arial, sans-serif;
+  z-index: 9;
+}
+
+.nav_list {
+  display: flex;
+  flex-flow: row;
+  list-style-type: none;
+}
+
+.nav_list a {
+  color: #fff;
+  font-size: 1em;
+  word-spacing: 0.2em;
   text-decoration: none;
+  margin-right: 1em;
 }
 
-* {
-  box-sizing: border-box;
+#about_us {
+  position: relative;
+  background: #4f4f4f;
+  padding: 100px 15px;
+
+  background: -webkit-radial-gradient(
+    circle,
+    #20232d,
+    #1d1e20
+  ); /* For Safari 5.1 to 6.0 */
+  background: -o-radial-gradient(
+    circle,
+    #20232d,
+    #1d1e20
+  ); /* For Opera 11.1 to 12.0 */
+  background: -moz-radial-gradient(
+    circle,
+    #20232d,
+    #1d1e20
+  ); /* For Firefox 3.6 to 15 */
+  background: radial-gradient(
+    circle,
+    #20232d,
+    #1d1e20
+  ); /* Standard syntax, android  */
+}
+
+#about_us h2 {
+  font-family: "bebasregular", Arial, sans-serif;
+  font-size: 3.5em;
+  word-spacing: 0.1em;
+  font-weight: 500;
+  color: #ffffff;
+  margin-top: 0;
+  padding: 0;
+}
+
+#about_us p {
+  margin: 1em auto;
+  font-family: "robotolight", Arial, sans-serif;
+  font-size: 1.2em;
+  line-height: 1.2em;
+  color: #ffffff;
+  text-align: left;
+  word-spacing: 1px;
 }
