--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -321,3 +321,85 @@ section.facebook {
 .booking .selectSubject > h5 {
   display: inline;
 }
+
+.selectSubject ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+}
+
+.selectSubject ul li {
+  color: #aaaaaa;
+  display: inline;
+  position: relative;
+  float: left;
+  width: auto;
+  height: 100px;
+}
+
+.selectSubject ul li input[type="radio"] {
+  position: absolute;
+  visibility: hidden;
+}
+
+.selectSubject ul li label {
+  display: block;
+  position: relative;
+  font-weight: 300;
+  font-size: 1.35em;
+  padding: 25px 25px 25px 80px;
+  margin: 10px auto;
+  height: 30px;
+  z-index: 9;
+  cursor: pointer;
+  -webkit-transition: all 0.25s linear;
+}
+
+.selectSubject ul li:hover label {
+  color: #ffffff;
+}
+
+.selectSubject ul li .check {
+  display: block;
+  position: absolute;
+  border: 5px solid #aaaaaa;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+  top: 30px;
+  left: 20px;
+  z-index: 5;
+  transition: border 0.25s linear;
+  -webkit-transition: border 0.25s linear;
+}
+
+.selectSubject ul li:hover .check {
+  border: 5px solid #ffffff;
+}
+
+.selectSubject ul li .check::before {
+  display: block;
+  position: absolute;
+  content: "";
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  top: 5px;
+  left: 5px;
+  margin: auto;
+  transition: background 0.25s linear;
+  -webkit-transition: background 0.25s linear;
+}
+
+.selectSubject input[type="radio"]:checked ~ .check {
+  border: 5px solid #5aa1b7;
+}
+
+.selectSubject input[type="radio"]:checked ~ .check::before {
+  background: #5aa1b7;
+}
+
+.selectSubject input[type="radio"]:checked ~ label {
+  color: #5aa1b7;
+}
