--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -303,6 +303,19 @@ section.facebook {
   border-radius: 12px;
 }
 
+.booking .selectFields {
+  min-width: fit-content;
+}
+
+.textFields {
+  padding-left: 20px;
+  max-width: 50%;
+}
+
+.textFields .bookingInput {
+  width: -webkit-fill-available;
+}
+
 .booking input[type="submit"] {
   margin-top: 30px;
 }
