--- a/styles/globals.css
+++ b/styles/globals.css
@@ -181,7 +181,7 @@ dd {
 input[type="button"],
 input[type="submit"],
 input[type="reset"] {
-  background: #aaa;
+  background: #5f5f5f;
   border: 0px;
   color: #111;
   font-family: "bebasregular", Arial, sans-serif;
@@ -204,4 +204,17 @@ input[type="reset"] {
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+}
+
+input[type="button"].active,
+input[type="submit"].active,
+input[type="reset"].active {
+  background: #aaa;
+  cursor: pointer;
+}
+
+input[type="button"].active:hover,
+input[type="submit"].active:hover,
+input[type="reset"].active:hover {
+  background-color: #5aa1b7;
 }
