--- a/styles/globals.css
+++ b/styles/globals.css
@@ -189,7 +189,7 @@ input[type="reset"] {
   font-weight: 100;
   letter-spacing: 1px;
   line-height: 1em;
-  margin: 0px;
+  margin: 0px 20px;
   padding: 0.7em 0.5em 0.5em 0.5em;
   text-align: right;
   text-decoration: none;
