--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,11 +46,13 @@ robotoitalic  robotolight roboto_condensedlight  roboto_condensedlight_italic  r
 
 body {
   margin: 0 auto;
-  background: url(/bg.jpg) no-repeat center center fixed;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+}
+
+.main-bg {
+  position: fixed;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
 }
 
 header {
