--- a/styles/globals.css
+++ b/styles/globals.css
@@ -173,6 +173,10 @@ H5 {
   text-decoration: none;
   margin-right: 1em;
 }
+.nav_list .active {
+  background-color: #1a9ac4;
+  padding: 5px 4px 1px;
+}
 
 dt {
   font-weight: 600;
